--- a/poc-golang/versao_04/client-side/src/pages/geral.json.html
+++ b/poc-golang/versao_04/client-side/src/pages/geral.json.html
@@ -4,10 +4,10 @@
                 {"label":"Quantidade","type":"number"}
               ],
           "rows": [
-                {"c":[{"v":"Assalto"},{"v":21}]},
-                {"c":[{"v":"Furto"},{"v":8}]},
-                {"c":[{"v":"Transito"},{"v":11}]},
-                {"c":[{"v":"Violencia"},{"v":20}]},
-                {"c":[{"v":"Assassinato"},{"v":10}]}
+                {"c":[{"v":"Assassinato"},{"v":10}]},
+                {"c":[{"v":"Categoria"},{"v":00}]},
+                {"c":[{"v":"Categoria"},{"v":00}]},
+                {"c":[{"v":"Categoria"},{"v":00}]},
+                {"c":[{"v":"Categoria"},{"v":00}]}
               ]
         }
