--- a/poc-golang/versao_04/client-side/src/pages/categoria.json.html
+++ b/poc-golang/versao_04/client-side/src/pages/categoria.json.html
@@ -4,10 +4,10 @@
                 {"label":"Quantidade","type":"number"}
               ],
           "rows": [
-                {"c":[{"v":"Central"},{"v":6}]},
-                {"c":[{"v":"Categoria"},{"v":00}]},
-                {"c":[{"v":"Categoria"},{"v":00}]},
-                {"c":[{"v":"Categoria"},{"v":00}]},
-                {"c":[{"v":"Categoria"},{"v":00}]}
+                {"c":[{"v":"Sul"},{"v":5}]},
+                {"c":[{"v":"Norte"},{"v":3}]},
+                {"c":[{"v":"Leste"},{"v":3}]},
+                {"c":[{"v":"Oeste"},{"v":3}]},
+                {"c":[{"v":"Central"},{"v":7}]}
               ]
         }
