--- a/poc-golang/versao_04/cliente/src/paginas/categoria.json.html
+++ b/poc-golang/versao_04/cliente/src/paginas/categoria.json.html
@@ -4,10 +4,10 @@
                 {"label":"Quantidade","type":"number"}
               ],
           "rows": [
-                {"c":[{"v":"Sul"},{"v":4}]},
+                {"c":[{"v":"Sul"},{"v":2}]},
                 {"c":[{"v":"Norte"},{"v":1}]},
                 {"c":[{"v":"Leste"},{"v":1}]},
-                {"c":[{"v":"Central"},{"v":5}]},
-                {"c":[{"v":"Categoria"},{"v":00}]}
+                {"c":[{"v":"Oeste"},{"v":2}]},
+                {"c":[{"v":"Central"},{"v":4}]}
               ]
         }
